infra/k8s/bid-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bid-svc
spec:
  selector:
    matchLabels:
      app: bid-svc
  template:
    metadata:
      labels:
        app: bid-svc
    spec:
      containers:
      - name: bid-svc
        image: dietbrand/bid-svc
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: bid-clusterip
spec:
  selector:
    app: bid-svc
  ports:
  - port: 80
    targetPort: 8080
