infra/k8s/gateway-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-svc
spec:
  selector:
    matchLabels:
      app: gateway-svc
  template:
    metadata:
      labels:
        app: gateway-svc
    spec:
      containers:
      - name: gateway-svc
        image: dietbrand/gateway-svc
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-clusterip
spec:
  selector:
    app: gateway-svc
  ports:
  - port: 80
    targetPort: 8080
