infra/k8s/notify-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notify-svc
spec:
  selector:
    matchLabels:
      app: notify-svc
  template:
    metadata:
      labels:
        app: notify-svc
    spec:
      containers:
      - name: notify-svc
        image: dietbrand/notify-svc
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: notify-clusterip
spec:
  selector:
    app: notify-svc
  ports:
  - port: 80
    targetPort: 8080
