infra/k8s/search-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-svc
spec:
  selector:
    matchLabels:
      app: search-svc
  template:
    metadata:
      labels:
        app: search-svc
    spec:
      containers:
      - name: search-svc
        image: dietbrand/search-svc
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: search-clusterip
spec:
  selector:
    app: search-svc
  ports:
  - port: 80
    targetPort: 8080
